<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:clickable="true"
                android:contentDescription="@string/go_back"
                android:focusable="true"
                android:src="@drawable/arrow"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="@color/prussian_blue"
                android:fontFamily="@font/hanken_grotesk_bold"
                android:textSize="25sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_thousand_of_users_finding_trusted_services_effortlessly"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="80dp"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/input"
                android:fontFamily="@font/hanken_grotesk"
                android:hint="@string/first_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:singleLine="true"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/input"
                android:fontFamily="@font/hanken_grotesk"
                android:hint="@string/last_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:singleLine="true"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/input"
                android:fontFamily="@font/hanken_grotesk"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:singleLine="true"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/input"
                android:fontFamily="@font/hanken_grotesk"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:singleLine="true"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:background="@drawable/button"
                style="?android:attr/borderlessButtonStyle"
                android:fontFamily="@font/hanken_grotesk_bold"
                tools:ignore="VisualLintButtonSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="#333333"
                    android:alpha="0.5"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:alpha="0.5"
                    android:fontFamily="@font/hanken_grotesk"
                    android:text="@string/or"
                    android:textColor="#333333"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="#333333"
                    android:alpha="0.5"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_secondary"
                android:gravity="center"
                android:paddingVertical="15dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_google"
                    android:layout_marginEnd="10dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_with_google"
                    android:fontFamily="@font/hanken_grotesk_bold"
                    android:textColor="@color/prussian_blue"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/klein_blue"
                    android:fontFamily="@font/hanken_grotesk"
                    android:textSize="14sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in"
                    android:textColor="@color/prussian_blue"
                    android:fontFamily="@font/hanken_grotesk_bold"
                    android:textSize="14sp"
                    android:layout_marginStart="5dp"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>