<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthGateActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/back"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/go_back"
                android:focusable="true"
                android:src="@drawable/arrow"
                android:clickable="true"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="350dp"
                    android:layout_height="350dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/placeholder"
                    tools:ignore="ImageContrastCheck" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_services_in_minutes"
                android:gravity="center"
                android:fontFamily="@font/hanken_grotesk_bold"
                android:textSize="25sp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/prussian_blue" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enjoy_a_simple_and_secure_booking_process_select_your_service_schedule_a_time_and_confirm_request_with_just_a_few_taps"
                android:gravity="center"
                android:textColor="@color/klein_blue"
                android:layout_marginTop="20dp"
                android:textSize="14sp"
                android:fontFamily="@font/hanken_grotesk"
                tools:ignore="VisualLintLongText" />
            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:background="@drawable/button"
                style="?android:attr/borderlessButtonStyle"
                android:fontFamily="@font/hanken_grotesk_bold"
                tools:ignore="VisualLintButtonSize" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/klein_blue"
                    android:fontFamily="@font/hanken_grotesk"
                    android:textSize="14sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in"
                    android:textColor="@color/prussian_blue"
                    android:fontFamily="@font/hanken_grotesk_bold"
                    android:textSize="14sp"
                    android:layout_marginStart="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>