<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyMailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:clickable="true"
                android:contentDescription="@string/go_back"
                android:focusable="true"
                android:src="@drawable/arrow"
                tools:ignore="TouchTargetSizeCheck"
                android:visibility="invisible"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_your_account"
                android:textColor="@color/prussian_blue"
                android:textSize="30sp"
                android:fontFamily="@font/hanken_grotesk_bold" />
            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="We've sent a verification link to [user@email.com]."
                tools:ignore="HardcodedText"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/hanken_grotesk"/>
            <Button
                android:id="@+id/is_verified"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/verify"
                style="?android:attr/borderlessButtonStyle"
                android:textAllCaps="false"
                android:fontFamily="@font/hanken_grotesk_bold"
                android:layout_marginTop="40dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/didn_t_receive_the_email"
                    android:fontFamily="@font/hanken_grotesk"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/resend_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resend"
                    android:fontFamily="@font/hanken_grotesk_bold"
                    android:textSize="14sp"
                    android:layout_marginStart="5dp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>