<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnboardingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/carousel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginVertical="20dp">

            <View
                android:id="@+id/dot_1"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@drawable/circle"
                android:layout_marginHorizontal="5dp"/>
            <View
                android:id="@+id/dot_2"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@drawable/circle_unselected"
                android:layout_marginHorizontal="5dp"/>
            <View
                android:id="@+id/dot_3"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@drawable/circle_unselected"
                android:layout_marginHorizontal="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/text_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingHorizontal="40dp"
            android:animateLayoutChanges="true">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hanken_grotesk_bold"
                android:gravity="center"
                android:text="@string/find_trusted_service_anytime_anywhere"
                android:textColor="@color/prussian_blue"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hanken_grotesk"
                android:text="@string/discover_a_world_of_relaiable_service_providers_at_your_fingertips"
                android:textSize="16sp"
                android:layout_marginHorizontal="2dp"
                android:textColor="@color/klein_blue"
                android:gravity="center"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="60dp">

            <Button
                android:id="@+id/skip_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:textColor="@color/prussian_blue"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/button_secondary"
                android:fontFamily="@font/hanken_grotesk"
                android:textAllCaps="true"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="UselessLeaf" />
            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/button"
                android:fontFamily="@font/hanken_grotesk"
                android:textAllCaps="false"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>